k8s/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: findthatproduct
  namespace: findthatproduct
spec:
  type: ClusterIP
  selector:
    app: findthatproduct
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
